# geoxarray

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  RELEASING.md  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
docs/: Makefile
docs/source/: conf.py  contributing.rst  faq.rst  index.rst  installation.rst  related.rst  roadmap.rst  usage.rst
docs/source/howtos/: access_crs.rst  coordinates.rst  index.rst  set_dims.rst  write_crs.rst  write_gcps.rst
docs/source/topics/: coordinates.rst  dimensions.rst  projections.rst  xarray_accessors.rst
docs/source/tutorials/: index.rst
geoxarray/: __init__.py  _version.py  accessor.py  coords.py
geoxarray/crs/: __init__.py  _cartopy.py  _proj4.py
geoxarray/tests/: __init__.py  conftest.py  test_examples.py
geoxarray/tests/test_accessor/: __init__.py  _data_array_cases.py  _dataset_cases.py  _shared.py  test_accessor_data_arr.py  test_accessor_dataset.py
